# Screenline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/commands/: next-ticket.md
.github/workflows/: ci.yml
docs/: ROADMAP_BACKLOG.md  architecture.md  manifest.md
docs/adr/: 0001-json-manifest-as-source-of-truth.md  0002-pluggable-embedder-zero-ml-default.md  0003-template-matching-for-scroll-detection.md  0004-strip-append-scroll-stitching.md  0005-project-centric-cross-recording-dedup.md  0006-noise-robust-segmentation-hysteresis.md  README.md
docs/eval/: 2026-06-22-huddle-walkthrough.md  2026-06-22-reevv-huddle.md
examples/: generate_sample.py
examples/sample_project/: transcript.md
examples/sample_project/.screenline/: processing_report.json  screenline.json  timeline.json
examples/sample_project/.screenline/exports/: summary.csv
src/screenline/: __init__.py  __main__.py  cli.py  config.py  manifest.py  project.py  utils.py
src/screenline/pipeline/: __init__.py  build.py  clustering.py  embeddings.py  export.py  scroll.py  segmentation.py  timeline.py  transitions.py  video.py
tests/: test_core.py
